Cycles fails to render when material contains UV mapped texture as volume input #46352

Closed
opened 2015-10-03 09:03:24 +02:00 by gandalf3 · 16 comments
Member

System Information
Archlinux

Blender Version
Broken: 2.76 RC3

Short description of error
Cycles fails to get past sample 1 when a material uses a UV texture on a volume input (sometimes blender crashes or freezes, but this only happened twice).

I would expect it to ignore the nonsensical material and render otherwise normally.

Exact steps for others to reproduce the error

  1. Open cycles_volume_UV_crash.blend
  2. Enable viewport render
**System Information** Archlinux **Blender Version** Broken: 2.76 RC3 **Short description of error** Cycles fails to get past sample 1 when a material uses a UV texture on a volume input (sometimes blender crashes or freezes, but this only happened twice). I would expect it to ignore the nonsensical material and render otherwise normally. **Exact steps for others to reproduce the error** 1. Open [cycles_volume_UV_crash.blend](https://archive.blender.org/developer/F241857/cycles_volume_UV_crash.blend) 2. Enable viewport render
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @gandalf3

Added subscriber: @gandalf3

Added subscriber: @mib2berlin

Added subscriber: @mib2berlin

Hi, cant reproduce crash or freeze but texture is not included.
Tested with own .png

Opensuse 13.2/64
CPU Intel #4200
4 GB Ram
GPU Intel GN 965

Cheers, mib

Hi, cant reproduce crash or freeze but texture is not included. Tested with own .png Opensuse 13.2/64 CPU Intel #4200 4 GB Ram GPU Intel GN 965 Cheers, mib
Author
Member

Here's a .blend with the texture packed cycles_volume_UV_crash.blend

Here's a .blend with the texture packed [cycles_volume_UV_crash.blend](https://archive.blender.org/developer/F241979/cycles_volume_UV_crash.blend)

Hi, tested your new file with my workstation but no freeze or crash.
Preview render work until the 10 appointed samples .

Opensuse 13.2/64
Intel i5 3770K
GTX 760 4 GB
Driver 355.11

Hi, tested your new file with my workstation but no freeze or crash. Preview render work until the 10 appointed samples . Opensuse 13.2/64 Intel i5 3770K GTX 760 4 GB Driver 355.11
Author
Member

Odd, fails every time for me.
Rendering on GPU freezes the display and renders the system unusable (need to reset)

Archlinux x86_64
Intel Xeon CPU E5420
GeForce GTX 460 766 MiB
4.5.0 NVIDIA 355.11

Odd, fails every time for me. Rendering on GPU freezes the display and renders the system unusable (need to reset) Archlinux x86_64 Intel Xeon CPU E5420 GeForce GTX 460 766 MiB 4.5.0 NVIDIA 355.11
Member

Added subscriber: @Blendify

Added subscriber: @Blendify
Member

Nothing bad happening here no crash successful render

Nothing bad happening here no crash successful render

Added subscriber: @brecht

Added subscriber: @brecht

It's easy to make this crash in a debug build, an assert will be triggered.

The issue is that shader nodes requests certain attributes depending if there is a surface shader with if(shader->has_surface). But they do not change the SVM code generation to disable looking up the attribute.

That should either be fixed, or the SVM attribute lookup code should be changed to not crash when looking up an attribute that was not requested. That was done as an optimization but in hindsight is probably too fragile.

It's easy to make this crash in a debug build, an assert will be triggered. The issue is that shader nodes requests certain attributes depending if there is a surface shader with `if(shader->has_surface)`. But they do not change the SVM code generation to disable looking up the attribute. That should either be fixed, or the SVM attribute lookup code should be changed to not crash when looking up an attribute that was not requested. That was done as an optimization but in hindsight is probably too fragile.

This issue was referenced by 91f1886b8e

This issue was referenced by 91f1886b8e010bdac32e8dbe6c244b7ff8b46abb

Added subscriber: @Sergey

Added subscriber: @Sergey

This is a bit of a tradeof between runtime check and memory usage by attributes which doesn't make sense. Since such a check was already done for geometry find_attribute() will add similar thing to SVM node.

We can check if we want to have attributes always copied to the device instead later.

This is a bit of a tradeof between runtime check and memory usage by attributes which doesn't make sense. Since such a check was already done for geometry `find_attribute()` will add similar thing to SVM node. We can check if we want to have attributes always copied to the device instead later.

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

This issue was referenced by blender/cycles@77c4eddd8a

This issue was referenced by blender/cycles@77c4eddd8ac19f1ef78071a007b63e2c222eab24
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#46352
No description provided.