Fix T46352: Cycles fails to render when material contains UV mapped texture as volume input